--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 h5py==3.6.0
 numpy==1.21.5
 opencv_python==4.5.5.62
+pandas==1.3.5
+python-dotenv==0.20.0
 scikit_learn==1.0.2
 scipy==1.7.3
 torch==1.10.1
